<resources>
    <string name="app_name">Speedlite</string>
    <string name="custom_payload_msg">Please enable custom payload to generate</string>
    <string name="locked_msg">Configuracion bloqueada</string>
	<string name="admobIDads">ca-app-pub-7259833628250260~8264764489</string>
	<string name="admobBannerads">ca-app-pub-7259833628250260/4672686605</string>
	<string name="admobinterst">ca-app-pub-7259833628250260/1984612382</string>
	<string name="admobreward">ca-app-pub-7259833628250260/4199318976</string>
	<string name="admobOpen">ca-app-pub-7259833628250260/3738270074</string>
   <string name="state_disconnecting">Desconectando</string>
    <string name="dash_sign">-</string>
    <string name="default_payload">CONNECT [host_port] [protocol][crlf][crlf]</string>
    <string name="remote_proxy">Remote Proxy</string>
    <string name="censored_string">********</string>
    <string name="sni_title">Server Name Indication (SNI)</string>
    <string name="current_dns">DNS (%1$s)</string>
    <string name="ssh_title">Secure Shell (SSH)</string>
    <string name="v2ray_xray">V2Ray</string>
    <string name="hysteria">Hysteria</string>
    <string name="dns_dnstt">DNS (DNSTT)</string>
    <string name="info1"> V2 Injector es una herramienta VPN profesional para navegar por Internet de forma privada y segura con múltiples tecnologías de protocolo y túneles incorporadas en una sola aplicación</string>
    <string name="info2">
	Funciona como un SSH universal, Proxy, SSL, Túnel DNS, Hysteria, Cliente V2Ray para cifrar tu conexión para que puedas navegar por Internet de forma privada y segura.

</string>
    <string name="operator_checkbox_tittle">Bloquear Operador</string>
	<string name="block_hwid_tittle">HWID Invalido, El Servidor Esta Bloqueado Por HWID\nContacta a tu distribuidor para otro servidor</string>
 <string name="block_only_data_movile">Configuracion bloqueada para Wifi, por favor activa los Datos Mobiles</string>
	<string name="only_play_store_instalation">Este Servidor Solo Permite la Instalacion de Play Store</string>
	<string name="only_play_store">Solo PlayStore</string>
	<string name="operator_block_tittle">Bloqueo De Operador Activo, Tu Operador es Diferente Al Establecido en el Servidor</string>
    <string name="info3">
	También te ayuda a acceder a sitios web bloqueados detrás de un cortafuegos. ¿Mejor parte? Podrás configurar tu propio servidor y conectarte usando esta aplicación.</string>
<string name="block_hwid_checkbox_tittle">Bloqueo de HWID</string>
    <string name="tutorial_desc">"Ejemplos, Manuales y Consejos:

		Developer:
		https://t.me/JV_injector

		Canal De Telegram:
		https://t.me/JV_injector

</string>
    <string name="more_from_us">Developer URL</string>
    <string name="ratetext">We resolved problem(s) successfully.</string>
    <string name="rate_text1">Is that worth a good rating?</string>
    <string name="speed">Speed</string>
    <string name="history">History</string>
    <string name="block_hwid_tittleR">bloquear hwid</string>
   <string name="delete_url_title">Borrar url</string>
    <string name="date_format">MM/dd/yyyy HH:mm</string>
    <string name="speedtest">Speed Test</string>
    <string name="value">-</string>
    <string name="upload">UPLOAD</string>
    <string name="download">DOWNLOAD</string>
    <string name="date">Unit</string>
    <string name="mbps">values</string>
    <string name="values">Mbps</string>
    <string name="scale">Scale</string>
    <string name="_100">100</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="share">Share</string>
    <string name="units">MBS</string>
    <string name="connection_name">Connection Name</string>
    <string name="warning">Exit App</string>
    <string name="description_dialogue">Are You Sure You Want to Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you Sure You Want to Exit</string>
	<string name="about">Acerca de</string>
	<string name="about1">Licencia</string>
	<string name="actived">Modo oscuro</string>
	<string name="disabled">Desactivado</string>
	<string name="config">Configuraciones</string>
	<string name="settings">Configuraciones</string>
	<string name="settings_ssh">Configuracion SSH</string>
    	<string name="settings_udp">Hysteria Settings</string>
    	<string name="settings_v2">Ajustes de V2ray</string>
	<string name="settings_ssh_title">Secured Shell (SSH)</string>
	<string name="settings_ssh_summary">SSH Ajustes</string>
	<string name="network_mobile">Radio de red</string>
	<string name="method_connection">Connection Method</string>
	<string name="rate_app">Rate</string>
	<string name="feedback">Feedback</string>
	<string name="category_forward_udp">Udp forwarding</string>
	<string name="title_forward_udp">Forward UDP</string>
	<string name="summary_forward_udp">Si está activo, redirige las solicitudes al servidor remoto. De lo contrario, las solicitudes UDP no se resolverán.</string>
	<string name="title_resolver_udp">UDP Gateway (Remote)</string>
    <string name="title_dns_secondary">DNS Secondary</string>
	<string name="summary_resolver_udp">Standard (7300)</string>
	<string name="category_forward_dns">DNS Forwarding</string>
	<string name="title_forward_dns">Forward DNS </string>
	<string name="summary_forward_dns">If active, it redirects requests to the remote server. If not, DNS requests will be resolved by the local system.</string>
	<string name="title_dns_primary">Primary DNS</string>
	<string name="category_advanced_settings">Advanced Settings</string>
	<string name="title_hide_log">Hide Log on Start</string>
	<string name="summary_hide_log">If active, the log will not be shown automatically.</string>
	<string name="title_auto_clear_log">Borrar registros automáticamente</string>
	<string name="summary_auto_clear_log">Si está activo, los registros se borran automáticamente.</string>
	<string name="category_forward_port">Port Forwarding</string>
	<string name="title_mode_debug">Debug mode</string>
	<string name="summary_mode_debug">Allows you to see more advanced information in the logs.</string>
	<string name="category_filter_apps">Filter Apps</string>
	<string name="category_settings_adicionais">Additional configurations</string>
	<string name="title_ping_time">Ping (seconds)</string>
	<string name="category_user_interface">User Interface</string>
	<string name="title_language">Language</string>
	<string name="category_tunnel">Tunnel</string>
	<string name="title_number_max_threads">Número máximo de subprocesos</string>
	<string name="summary_number_max_threads">Cuanto mayor sea el número de Threads, mayor será el consumo de energía y la velocidad de conexión de tu dispositivo.</string>
	<string name="title_mode_vpn">Send Traffic over VPN</string>
	<string name="summary_mode_vpn">If active, all traffic will be sent over the VPN.</string>
	<string name="title_filter_apps">Filter Apps</string>
	<string name="title_bypass_mode">Bypass Mode</string>
    <string name="summary_dns_primary">DNS (8.8.8.8)</string>
    <string name="summary_dns_secondary">DNS (8.8.4.4)</string>
	<string name="summary_bypass_modo">If active, traffic from the selected applications will be sent directly.</string>
	<string name="title_apps_list">Apps List</string>
	<string name="summary_apps_list">Enter a package name by line. See Settings -> Apps for the package name of the apps.</string>
	<string name="title_tethering_subnet">Subred de anclaje (beta)</string>
	<string name="summary_tethering_subnet">Habilítelo si tiene problemas para compartir Internet desde su dispositivo.</string>
	<string name="ssh_server">SSH Host</string>
	<string name="ssh_port">SSH Port</string>
	<string name="ssh_porta_local">Local Port (Socks5)</string>
	<string name="payload">Payload:</string>
	<string name="proxy_remote">Remote Proxy</string>
	<string name="squid">HTTP Proxy (eg: Squid)</string>
	<string name="proxy_ip">Proxy IP/Host</string>
	<string name="proxy_port">Port</string>
	<string name="proxy_auth">Proxy Authentication</string>
	<string name="proxy_user">Username</string>
	<string name="proxy_pass">Password</string>
	<string name="dir_name">Folder</string>
	<string name="alert_exit">¿Quieres salir o minimizar?</string>
	<string name="alert_clear_settings">¿Estás seguro de que quieres restaurar la configuración predeterminada?</string>
	<string name="no_value">none</string>
	<string name="blocked">Bloqueado</string>
	<string name="expired">Caducado</string>
	<string name="title_delete_file">Delete File</string>
	<string name="alert_delete_file">Do you want to delete this file?</string>
	<string name="dir_home_name">Almacenamiento interno</string>
	<string name="select_file_setting">Seleccione el archivo</string>
	<string name="title_permission_request">Permission granted</string>
	<string name="message_permission_request">Please, it is necessary to grant the necessary permission for the application to work correctly.</string>
	<string name="export_button">Exportar</string>
	<string name="title_security">Candado de seguridad</string>
	<string name="check_protect">Bloquear la configuración y evitar editar</string>
	<string name="title_extra">Otros ajustes</string>
	<string name="check_block_root">Bloquear root</string>
	<string name="check_show_login_start">Show login to start</string>
	<string name="check_date_valid">Establecer fecha de vencimiento</string>
	<string name="input_note_msg">Mensaje / nota para los usuarios (opcional)</string>
	<string name="alert_block_settings">Configurar el bloqueo no garantiza el 100% de seguridad</string>
	<string name="error_empty_name_file">El nombre del archivo no debe estar vacío.</string>
	<string name="minimize">Minimize</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="save">Save</string>
	<string name="open">Open</string>
	<string name="more">More</string>
	<string name="wait">Wait</string>
	<string name="attention">Attention</string>
     <string name="first_start_msg">Esta aplicación fue desarrollada para usuarios avanzados, tenga esto en cuenta al usarla.</string>
	<string name="opening_apn">Opening APN Settings</string>
	<string name="apn_settings">APN Settings</string>
	<string name="license">License</string>
	<string name="developer">Developer</string>
	<string name="code_based">Code Reference</string>
	<string name="close">Close</string>
	<string name="open_with">Open with</string>
	<string name="clear_settings">Clear Settings/Data</string>
	<string name="clear_logs">Logs Cleared</string>
	<string name="settings_ImportExport">Configuration</string>
	<string name="settings_import">Importar configuracion</string>
	<string name="settings_export">Exportar configuracion</string>
	<string name="wizard_details">Some details of AGN Injector Tunnel</string>
	<string name="wizard_details_msg">The AGN Injector Tunnel is a VPN client that works through an SSH server. The app itself is useless without a configuration, so it should only be used by advanced users.</string>
	<string name="payload_details">Keywords</string>
	<string name="payload_details_msg">Currently, the following keywords are supported in the connection text: %s</string>
    <string name="exit">Salir de la app</string>
	<string name="restore_default">Restablecer datos</string>
    <string name="auth_username">Username</string>
	<string name="public_key">Public Key</string>
	<string name="summary_private_key">"Your slowdns server's public key"</string>
	<string name="title_name_server">Server Name</string>
	<string name="summary_name_server">The hostname of the SlowDNS server</string>
	<string name="summary_dns">The DNS IP of your SlowDNS server</string>
	<string name="title_disable_delay_ssh">Deshabilitar el retraso de TCP</string>
<string name="summary_disable_delay_ssh">Si está activo no habrá retrasos entre solicitudes, lo que puede mejorar el ping o incluso la velocidad de la conexión.</string>
</resources>